@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <solr sharedLib="lib" persistent="true">
-	<cores adminPath="/admin/cores">
+	<cores adminPath="/admin/cores" hostPort="${jetty.port:8983}" hostContext="${hostContext:solr}">
 		<core default="true" instanceDir="db" name="db"/>
 		<core default="false" instanceDir="rss" name="rss"/>
 		<core default="false" instanceDir="mail" name="mail"/>
